--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
 # Symbolication related
 app.*.symbols
 
